# fauxchange

./: .dockerignore  .env.example  .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  RELEASE-READINESS.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: bench-regression.yml  ci.yml  release.yml
.sqlx/: query-0e1082e6864ccaf04f50b82919447f9a124da9a414b7f0ad8208c9d4c3d5a7da.json  query-0e8556e62908e794af087e759a9a994d11d7bca5c0e5ac47a93ff5323eb9da72.json  query-152a24248b491faa02a0d01795fa384d328c3dadd36b2a654e42218da31a734d.json  query-15aa9fe41e010c1b483bf6419a06803b6d53c05044949bdf7e36ba78c074dfd8.json  query-1b61bbf6f79a2492875da3fa52981c9d57babed9e3081996f84966086343f6de.json  query-2327987ef9d51f3b7ab1c0ee58ed772d5b392287bf8480fbf1524d5da8a54371.json  query-27a98dba028427579a7e1c422dccd3c24b034f457cc660a87d3b89e3b8852f52.json  query-27cc5730e387e15dd574d733919c158c5af7e8c21fc392043d0737c6ac2dc3b7.json  query-2c1e70a2c5a9258af20892f28e9b7bf25f27bebd3e672d5cab3d3771bb4089bb.json  query-3278f20140d7a56010287ec7d8f52735d638d660fa5065e14736c9ff1a6ed400.json  query-38180040debaae6b385f5cbfff42230cdf897aa7c79bcbdd5810a6cc575f7864.json  query-4545f31261823584697ab7efa507248081c77bb74acf54b6ec17638d0e398de0.json  query-4eccfaf72cb54141d711ad97360cce901199a7454f25a12d74bf0c5f2d263f0f.json  query-5e0aeead218a0aa1e6c08cb559fb55c9d8ef48143b45e3412e650e0ac5e69d78.json  query-64e7ab6d1f2eb02cdaea297b946e7b2f79ca9ae23d292f392718129f808fb2d9.json  query-6ffb8a724a5118cb8917c614bbd32a6ec111f10954876d2ebf501fb63ad6ad73.json  query-7fec8d4c1a6b46aacf9efd937eb805cd8de7c2eced68ad8b683429e5474ab73a.json  query-98c1f2c2d305038effabaad62e3292e0c26292a17f220e0ac8b9ea236262071c.json  query-b952b635564daaa1b5080d324b10e165054aa40dc74279552e5c2ba299c588e8.json  query-c0e96fc2e5b9775ff3941f51c673d85be0302af8244d989ec2eb840eec1094e3.json  query-e4f4d31ad6297588d0104439f2fe44480480f54a56d9cc1d4c4732fc2f31e28c.json  query-eb7e3c7ae7c0d2bfa8d8e94fe631806eb861406b237e02b62c4836c965d7fd38.json  query-eb7f445a921b73aed90c7f24019d6f887b07a51dd81326015770c6c883592497.json  query-fd9571e6711671e1956e796fbd6132394aa62cd4fa13d74d5c2574bf437143b3.json
benches/: alloc_dhat.rs  alloc_profile.rs  criterion_match_cost.rs  hp1_order_path.rs  hp2_ws_fanout.rs  hp3_fix_parse.rs  hp5_durable_append.rs  mm_requote_hdr.rs
benches/support/: fix_fixtures.rs  hdr.rs  mm_workload.rs  mod.rs  openloop.rs  timing.rs  workload.rs
docker/: Dockerfile  docker-compose.yml  scan-image-secrets.sh
docs/: ROADMAP.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fix_decode/: begin_string_mismatch.fix  duplicate_scalar_tag_seqnum.fix  fields_over_ceiling.fix  group_count_mismatch_delimiter_violation.fix  group_entries_over_ceiling.fix  malformed_checksum_value_out_of_range.fix  malformed_symbol_wrong_grammar.fix  mid_body_checksum_overflow.fix  missing_required_tag_side.fix  out_of_range_price.fix  oversized_frame_declared_body_length_over_cap.fix  tag_injection_fake_group_count_reopens_symbol.fix  truncated_incomplete_frame_no_trailer.fix  unsupported_application_msg_type.fix  unsupported_structural_msg_type.fix
fuzz/corpus/journal_bundle_decode/: bundle_hostile_manifest_version.json  bundle_missing_manifest.json  bundle_newer_bundle_schema.json  bundle_newer_journal_schema.json  bundle_truncated_bundle.json  bundle_valid_empty_streams.json  journal_duplicate_field.json  journal_negative_cents.json  journal_truncated_record.json  journal_unknown_field_injection.json  journal_valid_command_record.json
fuzz/corpus/rest_json_decode/: deeply_nested_type_mismatch.json  duplicate_field.json  malformed_json_syntax.json  malformed_symbol_bulk.json  missing_required_field.json  negative_quantity.json  out_of_range_price.json  truncated.json  unknown_field_injection.json  valid_bulk_order.json  valid_insert_price.json  valid_limit_order.json  valid_market_order.json  wrong_type_side.json  zero_quantity.json
fuzz/corpus/ws_frame_decode/: actionless_order_shaped.json  deeply_nested_type_mismatch.json  duplicate_action_field.json  duplicate_field.json  order_entry_shaped_rejected.json  replay_bundle_missing_manifest.json  truncated.json  unknown_action.json  valid_batch_subscribe.json  valid_kill.json  valid_record.json  valid_replay_bundle.json  valid_set_spread.json  valid_subscribe.json  valid_unsubscribe.json
fuzz/fuzz_targets/: fix_decode.rs  journal_bundle_decode.rs  rest_json_decode.rs  ws_frame_decode.rs
fuzz/tests/: ws_duplicate_action_key.rs
migrations/: 20260716120000_executions.sql  20260716120100_underlying_prices.sql  20260716120200_market_maker_configs.sql  20260716120300_system_control.sql  20260716120400_accounts.sql  20260716120500_journal.sql  20260716120600_fix_sessions.sql
scripts/: bench_regression_gate.py  record_bench_run_conditions.sh
seeds/: README.md  default.toml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  ohlc.rs  rng.rs  seed.rs  state.rs  subscription.rs
src/conformance/: cases.rs  harness.rs  mod.rs  parity.rs  report.rs
src/db/: error.rs  executions.rs  journal.rs  mod.rs  pool.rs
src/exchange/: actor.rs  boundary.rs  clordid_index.rs  envelope.rs  event.rs  executor.rs  identity.rs  instrument.rs  instrument_status.rs  journal.rs  mm_identity.rs  mod.rs  money.rs  recovery.rs  snapshot.rs  stores.rs  symbol.rs
src/gateway/: mod.rs
src/market_maker/: config.rs  control_hub.rs  engine.rs  mod.rs  persona.rs  pricer.rs  quoter.rs  sink.rs
src/microstructure/: apply.rs  config.rs  error.rs  fees.rs  ingress.rs  latency.rs  (+3 more)
tests/: actor.rs  adversarial.rs  auth.rs  bench_harness.rs  conformance_harness.rs  db.rs  determinism.rs  docker_smoke.rs  dos_controls.rs  fix_acceptor.rs  fix_adversarial.rs  fix_session.rs  golden.rs  golden_fix.rs  integration.rs  load.rs  market_maker.rs  order_path.rs  parity.rs  property.proptest-regressions  property.rs  recovery.rs  requote_isolation.rs  rest.rs  scenario_failure_modes.rs  security.rs  seed.rs  simulation.rs  snapshot.rs  state.rs  stores.rs  ws.rs
(+126 files in other folders)
