[package]
name = "fauxchange"
version = "0.0.1"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Exchange-in-a-box: a local options exchange simulator with realistic matching, FIX/WebSocket/REST APIs and historical replay, for testing trading systems."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/fauxchange"
homepage = "https://github.com/joaquinbejar/fauxchange"
keywords = ["finance", "exchange", "simulator", "trading", "testing"]
categories = ["finance", "simulation", "development-tools::testing"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
# Upstream matching stack. `option-chain-orderbook` re-exports the boundary
# newtypes (`OrderId`, `Side`, `Price`, `Quantity`, `TimeInForce`, `TimestampMs`,
# `Hash32`, `InstrumentStatus`) and owns the `SymbolParser` grammar. The
# `sequencer` feature is enabled from #006 (the single-writer order path): it
# activates the upstream `dep:tokio` (`rt` + `sync`) and `orderbook-rs/journal`,
# which pulls `crc32fast` 1.5 and `memmap2` 0.9 into the tree (the upstream
# on-disk journal machinery). #006 does not use that machinery — it builds the
# venue's own write-ahead envelope journal — but the feature makes the upstream
# sequencer / `MassCancelScope` / `MassCancelType` types reachable for the
# matching wiring in #007, and the audit note is recorded now.
option-chain-orderbook = { version = "0.7", features = ["sequencer"] }
# The async runtime for the per-underlying single-writer actor (#006): the
# bounded `mpsc` mailbox, the `oneshot` receipts, and the spawned actor task.
# `fauxchange` is async-first on `tokio` by design (CLAUDE.md; `rules` mandates
# `tokio::sync` primitives). Lean feature set — `rt` (the current-thread runtime
# + `spawn`), `sync` (`mpsc` / `oneshot`), and `macros` (`#[tokio::test]`); the
# `sequencer` feature above already activates tokio `rt` + `sync`, so this adds
# only the `macros` proc-macro to the tree. MIT, maintained by the tokio project.
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }
# Needed directly only to name `OptionStyle` / `ExpirationDate`: upstream
# `option-chain-orderbook` v0.7.0 does not re-export them, so they must come
# from `optionstratlib` at the seam. `default-features = false` keeps the build
# lean (no plotly / async), matching how the upstream crate depends on it.
optionstratlib = { version = "0.17", default-features = false }
# Concurrent map for the in-memory executions / positions stores (#008): the
# `rules/global_rules.md` Concurrency section blesses `DashMap` over
# `Arc<RwLock<HashMap<>>>` for sharded, lock-free point access. Version `6`
# (`6.2.1`) is already resolved transitively via the upstream matching stack
# (`option-chain-orderbook` / `orderbook-rs` / `pricelevel`), so this direct
# dependency adds NO new version to the tree. MIT/Apache-2.0, maintained by the
# `xacrimon/dashmap` project.
dashmap = "6"
# REST/WS boundary rendering: `IntoResponse` for `VenueError`, `Json` bodies,
# and the `http` status/header types (re-exported through `axum::http`). Lean
# feature set — only `json`, no server/runtime features — because #003 renders
# responses but does not run the Axum server (that lands with the REST gateway,
# #012). MIT, maintained by the tokio project.
axum = { version = "0.8", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Structured logging for the actor lifecycle and its degraded paths — the venue
# logs through `tracing` exclusively (never `println!` / `log`), per CLAUDE.md
# and `rules/global_rules.md`. #006 is the first issue to emit events (actor
# stopped, a dropped write on a reused/sealed sequence, a sequencer write that
# cannot proceed). Version `0.1` is already resolved transitively via the
# upstream stack, so this direct dependency adds NO new version to the tree.
# MIT, maintained by the tokio project.
tracing = "0.1"
# OpenAPI schema derivation: `ToSchema` on every REST/WS DTO and on the shared
# error envelopes, so #013 can register them in the OpenAPI document. Version 5
# (`5.5.0`) is already resolved transitively via the upstream stack, so this
# direct dependency adds NO new version to the tree. Default features only (no
# framework integration); the Swagger UI / `utoipa-axum` wiring lands with the
# REST gateway (#013). MIT/Apache-2.0, maintained by the utoipa project.
utoipa = "5"
# JWT (RS256, x509 key pair) for REST/WS auth (#011): `mint_token` / `verify_token`
# on the `JwtAuth` service. `default-features = false, features = ["use_pem"]`
# keeps exactly the PEM path we need (the `pem` + `simple_asn1` decoder) and no
# more; crucially, `DecodingKey::from_rsa_pem` extracts the RSA public key
# straight from a `CERTIFICATE` PEM, so `from_paths(cert, key)` needs NO separate
# x509 parser. The crypto backend is `ring` 0.17.14, which this dependency adds
# NEW to the tree (it was not present before #011) along with its transitive
# closure (`untrusted`, platform `windows_*` crates) — a native/asm RSA
# implementation entering the trusted computing base; `ring` is the reputable,
# widely audited crate `rustls` also uses, and `cargo audit`/`cargo deny` (#019)
# gate it. RS256 verification pins the algorithm to `[RS256]` (rejects `alg:none`
# and HS256 confusion before any crypto runs). MIT, maintained by the
# Keats/jsonwebtoken project (widely used, actively maintained).
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
# Multi-threaded runtime for the actor's concurrent-submit ordering test
# (`#[tokio::test(flavor = "multi_thread")]`); additive to the `[dependencies]`
# tokio features above.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
# `ServiceExt::oneshot` to drive the `auth_middleware` through a real `axum::Router`
# in `tests/auth.rs` (request flow → 401/403/429 + `X-RateLimit-*` headers) without
# binding a TCP listener. `tower` 0.5.3 is ALREADY in the tree (axum depends on
# it), so this dev-only dependency adds no new version; the `util` feature exposes
# `oneshot`. MIT, maintained by the tower project.
tower = { version = "0.5", features = ["util"] }
